# sumula

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.sh  spec.md  stop.sh
app/: config.py  database.py  main.py  models.py  schemas.py  worker.py
app/extractors/: _retry.py  bibtex.py  dblp.py  lattes.py  lattes_xml.py  orcid.py  pdf.py  scholar.py  web_fetch.py  wos.py  xlsx.py
app/pipeline/: _helpers.py  curate.py  email_send.py  enrich.py  extract.py  generate.py  prompts.py  validate.py  verify_author.py
app/routes/: api.py  web.py
app/templates/: base.html  index.html  status.html  sumula.html
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_drop_email_sending_email.py
tests/: conftest.py
tests/extractors/: test_dblp.py  test_lattes.py  test_orcid.py  test_retry.py  test_scholar.py  test_web_fetch.py  test_wos.py
